@@ -12,11 +12,9 @@ import demo.coin.late.CoinExecutor;
 import demo.coin.late.CoinLateWorker;
 import demo.coin.util.ByteArray;
 import demo.coin.util.ByteUtils;
-import demo.coin.util.CryptoUtil;
 import parallelism.ParallelServiceReplica;
 import parallelism.hibrid.late.ExtendedLockFreeGraph;
 
-import java.security.KeyPair;
 import java.security.NoSuchAlgorithmException;
 import java.security.spec.InvalidKeySpecException;
 import java.util.Collections;
@@ -40,7 +38,8 @@ public class CoinHibridServiceReplica extends ParallelServiceReplica {
 
         statistics = new ThroughputStatistics(id, lateWorkers, "resultsHibrid_" + id + "_" + numPartitions + "_" + lateWorkers + ".txt", "");
         subgraphs = createSubGraphs(numPartitions, cd);
-        initLateWorkers(lateWorkers, id, numPartitions);
+        initEarlyWorkers(numPartitions);
+        initLateWorkers(lateWorkers, numPartitions, statistics);
     }
 
     private ExtendedLockFreeGraph[] createSubGraphs(int numPartitions, CoinConflictDefinition cd) {
@@ -59,21 +58,20 @@ public class CoinHibridServiceReplica extends ParallelServiceReplica {
         this.scheduler = new CoinHibridScheduler(numPartitions, 100000000);
     }
 
-    @Override
-    protected void initWorkers(int n, int id) {
+
+    protected void initEarlyWorkers(int n) {
         System.out.println("n early: " + n);
         for (int i = 0; i < n; i++) {
             new CoinEarlyWorker(i, ((CoinHibridScheduler) this.scheduler).queues[i], subgraphs).start();
         }
     }
 
-    protected void initLateWorkers(int n, int id, int partitions) {
+    protected void initLateWorkers(int n, int partitions, ThroughputStatistics statistics) {
         System.out.println("n late: " + n);
         for (int i = 0; i < n; i++) {
-            new CoinLateWorker(id, partitions, subgraphs, (SingleExecutable) executor, replier, SVController, statistics).start();
+            new CoinLateWorker(i, partitions, subgraphs, (SingleExecutable) executor, replier, SVController, statistics).start();
         }
     }
-
 
     public static void main(String[] args) throws InvalidKeySpecException, NoSuchAlgorithmException {
         //@formatter:off
@@ -85,14 +83,27 @@ public class CoinHibridServiceReplica extends ParallelServiceReplica {
         int numPartitions = Integer.parseInt(args[PARAMS.NUM_PARTITIONS.ordinal()]);
         byte[] rootPubKey = ByteUtils.convertToByteArray(args[PARAMS.ROOT_PUBLIC_KEY.ordinal()]);
 
+        System.out.println("CoinHibridServiceReplica executado com os seguintes argumentos:");
+        System.out.println("\tid = " + id);
+        System.out.println("\tlateWorkers =" + lateWorkers);
+        System.out.println("\tnumPartitions =" + numPartitions);
+        System.out.println("\trootPubKey =" + ByteUtils.convertToText(rootPubKey));
+        System.out.println("");
+
+
         var particoes = new int[numPartitions];
         for (int i = 0; i < numPartitions; i++) {
             particoes[i] = i;
         }
-        CoinGlobalState globalState = new CoinGlobalState(Set.of(new ByteArray(rootPubKey)), null, particoes);
+        CoinGlobalState globalState = new CoinGlobalState(Set.of(new ByteArray(rootPubKey)), Collections.emptySet(), particoes);
         Executable executor = new CoinExecutor(globalState);
         CoinConflictDefinition cd = new CoinConflictDefinition();
 
         new CoinHibridServiceReplica(id, executor, null, numPartitions, cd, lateWorkers);
+    }
+
+    @Override
+    protected void initWorkers(int n, int id) {
+        // não faz nada!
     }
 }
